Resources/Parsers/atl/ATLParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/atl/ATL.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import ATLListener from './ATLListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ATLParser extends antlr4.Parser {

    static grammarFileName = "ATL.g4";
    static literalNames = [ null, "'module'", "';'", "'create'", "','", 
                            "'refining'", "'from'", "'library'", "'query'", 
                            "'='", "'uses'", "'helper'", "'def'", "':'", 
                            "'context'", "'('", "')'", "'unique'", "'lazy'", 
                            "'abstract'", "'rule'", "'extends'", "'{'", 
                            "'using'", "'}'", "'entrypoint'", "'endpoint'", 
                            "'in'", "'to'", "'mapsTo'", "'distinct'", "'foreach'", 
                            "'<-'", "'do'", "'if'", "'else'", "'for'", "'!'", 
                            "'|'", "'iterate'", "'OclUndefined'", "'true'", 
                            "'false'", "'then'", "'endif'", "'super'", "'let'", 
                            "'#'", "'Bag'", "'Set'", "'OrderedSet'", "'Sequence'", 
                            "'Map'", "'Tuple'", "'TupleType'", "'Integer'", 
                            "'Real'", "'Boolean'", "'String'", "'.'", "'->'", 
                            "'not'", "'-'", "'*'", "'/'", "'div'", "'mod'", 
                            "'+'", "'>'", "'<'", "'>='", "'<='", "'<>'", 
                            "'and'", "'or'", "'xor'", "'implies'", "'nodefault'", 
                            "'OclType'", "'OclAny'", "'Collection'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "STRING", "INTEGER", "FLOAT", "IDENTIFIER", 
                             "WS", "COMMENT", "LINE_COMMENT" ];
    static ruleNames = [ "unit", "module", "targetModelPattern", "sourceModelPattern", 
                         "transformationMode", "library_", "query", "libraryRef", 
                         "moduleElement", "helper", "oclFeatureDefinition", 
                         "oclContextDefinition", "oclFeature", "operation", 
                         "parameter", "attribute", "arule", "matchedRule", 
                         "lazyMatchedRule", "ruleVariableDeclaration", "calledRule", 
                         "inPattern", "inPatternElement", "simpleInPatternElement", 
                         "outPattern", "outPatternElement", "simpleOutPatternElement", 
                         "forEachOutPatternElement", "binding", "actionBlock", 
                         "statement", "bindingStat", "expressionStat", "ifStat", 
                         "forStat", "oclModel", "oclModelElement", "oclExpression", 
                         "iteratorExp", "iterateExp", "collectionOperationCallExp", 
                         "operationCallExp", "navigationOrAttributeCallExp", 
                         "iterator", "oclUndefinedExp", "primitiveExp", 
                         "numericExp", "booleanExp", "integerExp", "realExp", 
                         "stringExp", "ifExp", "variableExp", "superExp", 
                         "letExp", "variableDeclaration", "enumLiteralExp", 
                         "collectionExp", "bagExp", "setExp", "orderedSetExp", 
                         "sequenceExp", "mapExp", "mapElement", "tupleExp", 
                         "tuplePart", "oclType", "oclAnyType", "tupleType", 
                         "tupleTypeAttribute", "mapType", "primitive", "numericType", 
                         "integerType", "realType", "booleanType", "stringType", 
                         "collectionType", "bagType", "setType", "orderedSetType", 
                         "sequenceType", "priority_0", "priority_1", "priority_2", 
                         "priority_3", "priority_4", "priority_5", "matchedRule_abstractContents", 
                         "oclType_abstractContents", "oclAnyType_abstractContents", 
                         "collectionType_abstractContents", "primary_oclExpression" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ATLParser.ruleNames;
        this.literalNames = ATLParser.literalNames;
        this.symbolicNames = ATLParser.symbolicNames;
    }



	unit() {
	    let localctx = new UnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ATLParser.RULE_unit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 186;
	            this.module();
	            break;
	        case 7:
	            this.state = 187;
	            this.library_();
	            break;
	        case 8:
	            this.state = 188;
	            this.query();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 191;
	        this.match(ATLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	module() {
	    let localctx = new ModuleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ATLParser.RULE_module);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this.match(ATLParser.T__0);
	        this.state = 194;
	        _la = this._input.LA(1);
	        if(!(_la===81 || _la===84)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 195;
	        this.match(ATLParser.T__1);
	        this.state = 196;
	        this.match(ATLParser.T__2);
	        this.state = 197;
	        this.targetModelPattern();
	        this.state = 198;
	        this.transformationMode();
	        this.state = 199;
	        this.sourceModelPattern();
	        this.state = 200;
	        this.match(ATLParser.T__1);
	        this.state = 204;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 201;
	            this.libraryRef();
	            this.state = 206;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 210;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 102631456) !== 0) || _la===77) {
	            this.state = 207;
	            this.moduleElement();
	            this.state = 212;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	targetModelPattern() {
	    let localctx = new TargetModelPatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ATLParser.RULE_targetModelPattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this.oclModel();
	        this.state = 218;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 214;
	            this.match(ATLParser.T__3);
	            this.state = 215;
	            this.oclModel();
	            this.state = 220;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sourceModelPattern() {
	    let localctx = new SourceModelPatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ATLParser.RULE_sourceModelPattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 221;
	        this.oclModel();
	        this.state = 226;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 222;
	            this.match(ATLParser.T__3);
	            this.state = 223;
	            this.oclModel();
	            this.state = 228;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transformationMode() {
	    let localctx = new TransformationModeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ATLParser.RULE_transformationMode);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 229;
	        _la = this._input.LA(1);
	        if(!(_la===5 || _la===6)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	library_() {
	    let localctx = new Library_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ATLParser.RULE_library_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 231;
	        this.match(ATLParser.T__6);
	        this.state = 232;
	        _la = this._input.LA(1);
	        if(!(_la===81 || _la===84)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 233;
	        this.match(ATLParser.T__1);
	        this.state = 237;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 234;
	            this.libraryRef();
	            this.state = 239;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 243;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===11) {
	            this.state = 240;
	            this.helper();
	            this.state = 245;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ATLParser.RULE_query);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 246;
	        this.match(ATLParser.T__7);
	        this.state = 247;
	        _la = this._input.LA(1);
	        if(!(_la===81 || _la===84)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 248;
	        this.match(ATLParser.T__8);
	        this.state = 249;
	        this.oclExpression();
	        this.state = 250;
	        this.match(ATLParser.T__1);
	        this.state = 254;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 251;
	            this.libraryRef();
	            this.state = 256;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 260;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===11) {
	            this.state = 257;
	            this.helper();
	            this.state = 262;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	libraryRef() {
	    let localctx = new LibraryRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ATLParser.RULE_libraryRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 263;
	        this.match(ATLParser.T__9);
	        this.state = 264;
	        this.match(ATLParser.STRING);
	        this.state = 265;
	        this.match(ATLParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleElement() {
	    let localctx = new ModuleElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ATLParser.RULE_moduleElement);
	    try {
	        this.state = 269;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 267;
	            this.helper();
	            break;
	        case 5:
	        case 17:
	        case 18:
	        case 19:
	        case 20:
	        case 25:
	        case 26:
	        case 77:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 268;
	            this.arule();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	helper() {
	    let localctx = new HelperContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ATLParser.RULE_helper);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 271;
	        this.match(ATLParser.T__10);
	        this.state = 272;
	        this.oclFeatureDefinition();
	        this.state = 273;
	        this.match(ATLParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oclFeatureDefinition() {
	    let localctx = new OclFeatureDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ATLParser.RULE_oclFeatureDefinition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 276;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===14) {
	            this.state = 275;
	            this.oclContextDefinition();
	        }

	        this.state = 278;
	        this.match(ATLParser.T__11);
	        this.state = 279;
	        this.match(ATLParser.T__12);
	        this.state = 280;
	        this.oclFeature();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oclContextDefinition() {
	    let localctx = new OclContextDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ATLParser.RULE_oclContextDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 282;
	        this.match(ATLParser.T__13);
	        this.state = 283;
	        this.oclType();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oclFeature() {
	    let localctx = new OclFeatureContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ATLParser.RULE_oclFeature);
	    try {
	        this.state = 287;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 285;
	            this.operation();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 286;
	            this.attribute();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operation() {
	    let localctx = new OperationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, ATLParser.RULE_operation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 289;
	        this.match(ATLParser.IDENTIFIER);
	        this.state = 290;
	        this.match(ATLParser.T__14);
	        this.state = 299;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===84) {
	            this.state = 291;
	            this.parameter();
	            this.state = 296;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 292;
	                this.match(ATLParser.T__3);
	                this.state = 293;
	                this.parameter();
	                this.state = 298;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 301;
	        this.match(ATLParser.T__15);
	        this.state = 302;
	        this.match(ATLParser.T__12);
	        this.state = 303;
	        this.oclType();
	        this.state = 304;
	        this.match(ATLParser.T__8);
	        this.state = 305;
	        this.oclExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameter() {
	    let localctx = new ParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ATLParser.RULE_parameter);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 307;
	        this.match(ATLParser.IDENTIFIER);
	        this.state = 308;
	        this.match(ATLParser.T__12);
	        this.state = 309;
	        this.oclType();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attribute() {
	    let localctx = new AttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, ATLParser.RULE_attribute);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 311;
	        this.match(ATLParser.IDENTIFIER);
	        this.state = 312;
	        this.match(ATLParser.T__12);
	        this.state = 313;
	        this.oclType();
	        this.state = 314;
	        this.match(ATLParser.T__8);
	        this.state = 315;
	        this.oclExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arule() {
	    let localctx = new AruleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, ATLParser.RULE_arule);
	    try {
	        this.state = 319;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 317;
	            this.calledRule();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 318;
	            this.matchedRule();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


